Slight cleanup of code

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ Stage 3/work/_info
 Stage 3/work/_info
 Stage 3/work/_info
 Stage 3/work/_info
+Stage 3/__Previews/hazard_detection_unit.vPreview
+Stage 3/work/_info
