--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ Stage 3/work/_info
 Stage 3/work/_info
 Stage 3/__Previews/hazard_detection_unit.vPreview
 Stage 3/work/_info
+Stage 3/work/_vmake
+Stage 3/work/_info
+Stage 3/work/_info
+Stage 3/work/_vmake
